k8s/account-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: core-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: account-service:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: core-bank
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: account-service
