k8s/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: core-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: core-bank
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: grafana
