k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: core-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka:latest
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: core-bank
spec:
  ports:
  - port: 9092
    targetPort: 9092
  selector:
    app: kafka
