k8s/transaction-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: core-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: transaction-service:latest
        ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: core-bank
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: transaction-service
