k8s/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: core-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: bitnami/zookeeper:latest
        ports:
        - containerPort: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: core-bank
spec:
  ports:
  - port: 2181
    targetPort: 2181
  selector:
    app: zookeeper
